--- a/Singularity.User.Infrastructure/Singularity.User.Infrastructure.csproj
+++ b/Singularity.User.Infrastructure/Singularity.User.Infrastructure.csproj
@@ -6,4 +6,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Contexts\" />
+    <Folder Include="EntityConfigrations\" />
+    <Folder Include="Migrations\" />
+    <Folder Include="SeedData\Scripts\" />
+  </ItemGroup>
+
 </Project>
